# noc-kbu-project

./: .gitignore  list_article_response_intercom.json
noc_kbu/: .env.example  CLAUDE.md  NOC_KBU_Slack_Canvas.md  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
noc_kbu/agents/: __init__.py  content_analyzer.py  intercom_extractor.py  review_manager.py  zendesk_uploader.py
noc_kbu/config/: __init__.py  settings.py
noc_kbu/tests/: __init__.py  test_config.py
